--- a/bmpmanipuleitor.cbp
+++ b/bmpmanipuleitor.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="--comodin unlam.bmp " />
+				<Option parameters="--negativo --tonalidad-roja=15 --tonalidad-verde=5 --tonalidad-azul=50 --comodin unlam.bmp" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
